aggiunto secondo paragrafo

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
     <h1>Corso GIT 2</h1>
     
     <p>blablabla 1</p>
+    <p>aggiunto secondo paragrafo</p>
 </body>
 </html>
