aggiunto un altro commento

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 facciamo "git commit -m "create pagine essenziali" -m "aggiunta pagina index ,about e html"  
 tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secondo -m possiamo inserire una descrizione delle modifiche "
 
--
+-faccio "git log" per vedere tutti i commit apportati ai file
 
 
 -->
