--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
     <h1>Corso GIT 2</h1>
     
     <p>blablabla 1</p>
+
     <p>aggiunto secondo paragrafo</p>
+
+    <div>aggiunto uno spazio per vedere se le modifiche sono state apportate </div>
+    
 </body>
 </html>
