--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
 
 -faccio "git log" per vedere tutti i commit apportati ai file
 
+-utilizzo "git checkout -b dev" dopo -b specifico il nome del brench su cui mi voglio spostare
 
 -->
 
 
-    <h1>Corso GIT 2</h1>
+    <h1>Corso GIT 2 da brench DEV</h1>
     
     <p>blablabla 1</p>
 
     <p>aggiunto secondo paragrafo</p>
 
     <div>aggiunto uno spazio per vedere se le modifiche sono state apportate </div>
-    
+
 </body>
 </html>
