--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
 
 -faccio "git log" per vedere tutti i commit apportati ai file
 
--utilizzo "git checkout -b dev" dopo -b specifico il nome del brench su cui mi voglio spostare
+-utilizzo "git checkout -b dev" con -b specifico che voglio creare un nuovo brench,e dopo specifico il nome del brench 
 
 -->
 
