--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
 -->
 
 
-    <h1>Corso GIT 2</h1>
+    <h1>Corso GIT 2 Master</h1>
     
     <p>blablabla 1</p>
 
