--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
 
 -utilizzo "git checkout -b dev" con -b specifico che voglio creare un nuovo brench,e dopo specifico il nome del brench 
 
+-utilizzo "git merge dev" utilizzo git merge + nome del brench da cui voglio passare,fondere, le modifiche fate (in questo caso dev)
+qua mi sposto sul brench master e utilizzo git merge dev per far vedere le modifiche all'utente sul sito per esempio
+
 -->
 
 
