aggiunto commento su git reset

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ tra le viirgolette dopo la prima -m inseriamo il titolo del commit dopo il secon
 -utilizzo "git merge dev" utilizzo git merge + nome del brench da cui voglio passare,fondere, le modifiche fate (in questo caso dev)
 qua mi sposto sul brench master e utilizzo git merge dev per far vedere le modifiche all'utente sul sito per esempio
 
+-il comando "git reset" mi permette di tornare indietro sulla cosa che ho fatto, esempio tutte le modifiche preparate per fare il commit
+
+
+
 -->
 
 
