--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ qua mi sposto sul brench master e utilizzo git merge dev per far vedere le modif
 
 -il comando "git reset" mi permette di tornare indietro sulla cosa che ho fatto, esempio tutte le modifiche preparate per fare il commit
 
-
+-con il comando "git remote add origin https://github.com/odapak/prove_git.git" eseguire il comando git remote add + nome che si vuole dare 
+all'origine dati remota + il link github si aggiunge una nuova origine dati su cui poter pushare i nostri documenti e file 
 
 -->
 
@@ -39,5 +40,6 @@ qua mi sposto sul brench master e utilizzo git merge dev per far vedere le modif
 
     <div>aggiunto uno spazio per vedere se le modifiche sono state apportate </div>
 
+    
 </body>
 </html>
