aggiunto comando git push

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ qua mi sposto sul brench master e utilizzo git merge dev per far vedere le modif
 -con il comando "git remote add origin https://github.com/odapak/prove_git.git" eseguire il comando git remote add + nome che si vuole dare 
 all'origine dati remota + il link github si aggiunge una nuova origine dati su cui poter pushare i nostri documenti e file 
 
+-con il comando "git push origin dev" poi posso pushare cioè aggiungere le modifiche del progetto alla repository di destinazione 
+
 -->
 
 
