aggiunta un div dopo il push

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ all'origine dati remota + il link github si aggiunge una nuova origine dati su c
 
     <div>aggiunto uno spazio per vedere se le modifiche sono state apportate </div>
 
+    <div>aggiunto un div dopo il push del progetto</div>
     
 </body>
 </html>
